Update to Android 33

--- a/AccelerometerApp/AccelerometerApp.csproj
+++ b/AccelerometerApp/AccelerometerApp.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>netstandard2.1</TargetFramework>
         <LangVersion>latest</LangVersion>
         <Nullable>enable</Nullable>
+        <BuildWithMSBuildOnMono>true</BuildWithMSBuildOnMono>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Syncfusion.Xamarin.SfGauge" Version="22.2.8" />
